Fixed text overflow on project cards

--- a/src/Components/styles/Project.css
+++ b/src/Components/styles/Project.css
@@ -17,6 +17,11 @@
   border-radius: 5px;
 }
 
+.description {
+  max-height: 100%;
+  overflow-y: scroll;
+}
+
 .projectFront {
   position: relative;
   width: 100%;
